# Magas

./: .gitmodules  AppMagnetostaticLinear.cpp  AppMagnetostaticPicard.cpp  CMakeLists.txt  LICENSE  README.md  dependencies.txt  linear.cpp  linear.h  notes.txt
.github/workflows/: cmake.yml
examples/: CMakeLists.txt
examples/2_conductors/: 2_conductors.json  (+2 more)
include/: ExportVtu.h  ExpressionPostprocessorSum.h  LinearSolver.h  MagneticEnergyPostprocessor.h  MagneticFluxPostprocessor.h  MatIDPostprocessor.h  NewtonSolver.h  PicardSolver.h  PostMagneticFluxDensity.h  RightHandSide.h  misc.h
scripts/: no_load.py  no_load_plot.py  plot_tocke.py  sim_idiq.py  tocke1.csv  tocke2.csv
src/: AppMagnetostaticLinear.cpp  AppMagnetostaticNonLinear.cpp  AppMagnetostaticPicard.cpp  AppMagnetostaticSolver.cpp  CMakeLists.txt  ExportVtu.cpp  ExpressionPostprocessor.cpp  ExpressionPostprocessorSum.cpp  LinearSolver.cpp  MagneticEnergyDensityPostprocessor.cpp  MagneticEnergyPostprocessor.cpp  MagneticFluxPostprocessor.cpp  MatIDPostprocessor.cpp  NewtonSolver.cpp  PicardSolver.cpp  PostMagneticFluxDensity.cpp  RightHandSide.cpp  misc.h
src/input/: CMakeLists.txt  Dummy.cpp
src/input/include/: ConfigParser.h  JsonInputTranslator.h
src/input/src/: JsonInputTranslator.cpp
src/input/test/: test_ConfigParser.cpp  test_JsonInputTranslator.cpp
src/material/: CMakeLists.txt
src/material/include/: AnalyticNuCurve.h  BHCurveFactory.h  InterpolatedNuCurve.h  LinearBHCurve.h  LinearNuCurve.h  NuCurve.h  NuCurveFactory.h
src/material/src/: AnalyticBHCurve.cpp  BHCurveFactory.cpp  InterpolatedBHCurve.cpp  LinearBHCurve.cpp
src/material/test/: test_AnalyticBHCurve.cpp  test_BHCurveFactory.cpp  test_InterpolatedBHCurve.cpp  test_LinearBHCurve.cpp
src/postprocessing/: CMakeLists.txt  ExportVtu.cpp  ExpressionPostprocessor.cpp  ExpressionPostprocessorSum.cpp  MagneticEnergyDensityPostprocessor.cpp  MagneticEnergyPostprocessor.cpp  MagneticFluxPostprocessor.cpp  MatIDPostprocessor.cpp
src/postprocessing/include/: ExpressionPostprocessor.h  ExpressionPostprocessorSum.h  MagneticEnergyDensityPostprocessor.h  MagneticFluxPostprocessor.h  Postprocessor.h
src/postprocessing/include/export/: ExportVtu.h
src/postprocessing/include/processors/: ArkkioScalarPostprocessor.h  CellPostprocessor.h  EggShellCellPostprocessor.h  EggShellPostprocessor.h  ExpressionCellPostprocessor.h  ExpressionScalarPostprocessor.h  FluxLinkageScalarPostprocessor.h  ForceEggShellScalarPostprocessor.h  MatIDPostprocessor.h  NeighborPostprocessor.h  PointBabsScalarPostprocessor.h  RegexPatterns.h  ScalarPostprocessor.h  ScalarPostprocessorFactory.h  TorqueEggShellCellPostprocessor.h  TorqueEggShellPostprocessor.h  TorqueEggShellScalarPostprocessor.h
src/postprocessing/src/export/: ExportVtu.cpp
src/postprocessing/src/processors/: ArkkioScalarPostprocessor.cpp  EggShellPostprocessor.cpp  ExpressionCellPostprocessor.cpp  ExpressionScalarPostprocessor.cpp  FluxLinkageScalarPostprocessor.cpp  ForceEggShellScalarPostprocessor.cpp  MatIDPostprocessor.cpp  NeighborPostprocessor.cpp  PointBabsScalarPostprocessor.cpp  ScalarPostprocessorFactory.cpp  TorqueEggShellCellPostprocessor.cpp  TorqueEggShellPostprocessor.cpp  TorqueEggShellScalarPostprocessor.cpp
src/postprocessing/test/: test_ExportVtu.cpp  test_ExpressionPostprocessor.cpp  test_ExpressionPostprocessorSum.cpp  test_MagneticEnergyDensityPostprocessor.cpp  test_MagneticEnergyPostprocessor.cpp  test_MagneticFluxPostprocessor.cpp
src/postprocessing/test/test_export/: test_ExportVtu.cpp
src/postprocessing/test/test_processors/: test_ArkkioScalarPostprocessor.cpp  test_EggShellCellPostprocessor.cpp  test_EggShellPostprocessor.cpp  test_ExpressionCellPostprocessor.cpp  test_ExpressionPostprocessor.cpp  test_ExpressionPostprocessorSum.cpp  test_ExpressionScalarPostprocessor.cpp  test_FluxLinkageScalarPostprocessor.cpp  test_ForceEggShellScalarPostprocessor.cpp  test_NeighborPostprocessor.cpp  test_PointBabsScalarPostprocessor.cpp  test_ScalarPostprocessorFactory.cpp  test_TorqueEggShellPostprocessor.cpp  test_TorqueEggShellScalarPostprocessor.cpp
src/preprocessing/: CMakeLists.txt  Dummy.cpp  PeriodicityMapper.cpp
src/preprocessing/include/: AnalyticBHCurve.h  BHCurve.h  CirclePeriodicityMapper.h  ConfigParser.h  IPeriodicityMapper.h  InterpolatedBHCurve.h  LinePeriodicityMapper.h  LinearBHCurve.h  OverlapPointsTransformation.h  PeriodicityMapper.h  PeriodicityMapperFactory.h  SlidingRotation.h
src/preprocessing/src/: AnalyticBHCurve.cpp  BHCurveFactory.cpp  CirclePeriodicityMapper.cpp  ConfigParser.cpp  InterpolatedBHCurve.cpp  LinePeriodicityMapper.cpp  LinearBHCurve.cpp  PeriodicityMapperFactory.cpp  SlidingRotation.cpp
src/preprocessing/test/: test_AnalyticBHCurve.cpp  test_BHCurveFactory.cpp  test_CirclePeriodicityMapper.cpp  test_ConfigParser.cpp  test_InterpolatedBHCurve.cpp  test_LinePeriodicityMapper.cpp  test_LinearBHCurve.cpp  test_OverlapPointsTransformation.cpp  test_PeriodicityMapper.cpp  test_PeriodicityMapperFactory.cpp  test_SlidingRotation.cpp  test_gmsh_mesh.cpp
src/solver/: CMakeLists.txt  LinearSolver.cpp  NewtonSolver.cpp  PicardSolver.cpp  Solver.cpp  SolverFactory.cpp
src/solver/include/: LinearSolver.h  NewtonSolver.h  PicardSolver.h  Solver.h  SolverFactory.h
src/solver/test/: test_LinearSolver.cpp  test_NewtonSolver.cpp  test_PicardSolver.cpp
src/sources/: CMakeLists.txt
src/sources/include/: ConstFSource.h  ExprFSource.h  FSource.h  FSourceFactory.h  HSource.h
src/sources/src/: ConstFSource.cpp  ExprFSource.cpp  FSourceFactory.cpp
src/sources/test/: test_ConstFSource.cpp  test_ExprFSource.cpp  test_FSourceFactory.cpp
test/: test_ExportVtu.cpp  test_ExpressionPostprocessor.cpp  test_ExpressionPostprocessorSum.cpp  test_LinearSolver.cpp  test_MagnetComputations.cpp  test_MagneticEnergyDensityPostprocessor.cpp  test_MagneticEnergyPostprocessor.cpp  test_MagneticFluxPostprocessor.cpp  test_NewtonSolver.cpp  test_PicardSolver.cpp  test_PostMagneticFluxDensity.cpp  test_export_vtu11.cpp  test_gmsh_mesh.cpp
(+91 files in other folders)
